--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ body {
 section {
   @apply flex flex-col w-full max-w-md min-h-screen;
 }
+
+@font-face {
+  font-family: "LPMQ IsepMisbah";
+  src: url(./assets/font/LPMQ\ IsepMisbah.ttf);
+}
+
+.arabic {
+  @apply font-LPMQ
+}
